care/force-app/main/default/objects/CCC_Web_Ad_Pricing_Setting__mdt/CCC_Web_Ad_Pricing_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Defines the mapping between Web_Ad_Payment_Plan__c on Opportunity and the WebAdPricingTier</description>
    <label>CCC Web Ad Pricing Setting</label>
    <pluralLabel>CCC Web Ad Pricing Settings</pluralLabel>
</CustomObject>