care/force-app/main/default/objects/CCC_Web_Ad_Pricing_Setting__mdt/fields/Contract_Length__c.field-meta.xml
<CustomField>
    <fullName>Contract_Length__c</fullName>
    <label>Contract Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Year</fullName>
                <default>true</default>
                <label>Full Year</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>