care/force-app/main/default/objects/CCC_Web_Ad_Pricing_Setting__mdt/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <label>Discount Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>