care/force-app/main/default/objects/CCC_Web_Ad_Pricing_Setting__mdt/fields/Web_Ad_Budget__c.field-meta.xml
<CustomField>
    <fullName>Web_Ad_Budget__c</fullName>
    <label>Web Ad Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>