care/force-app/main/default/objects/CCC_Web_Ad_Pricing_Setting__mdt/fields/Web_Ad_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Web_Ad_Payment_Plan__c</fullName>
    <label>Web Ad Payment Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>